# rustnote

./: .pre-commit-config.yaml  01.txt  688123.sh.info  Cargo.toml  Pipfile  README.en.md  README.md  SH600000.csv  ass.txt  cash.txt  demo.py  demoincode.txt  final_al.ipynb  finial_base.py  index.dir  index.en.dir  k2.py  stack  stack600019  stock.ipynb  tmphtml.html  价值投资分析.md  外部接口api.md
dashweb/: dashdemo.ipynb  plotdash.ipynb
diffreq/: Cargo.toml
diffreq/examples/: atty.rs  config.rs  req_stock.rs  similar.rs  stock_req.rs  xreq_config.rs
diffreq/fixtures/: SH.txt  res.md  test.yml  xdiff.yml  xreq.yml  xuqiu.cookie
diffreq/src/: cli.rs  config.rs  lib.rs  main.rs  req.rs  util.rs
diffreq/src/config/: mod.rs  xdiff.rs  xreq.rs
examples/: req_finial.rs  req_stock.rs  stock_data.rs
finial_data/: 000001.SZ_asset.csv  000001.SZ_cash.csv  000001.SZ_cash_one.csv  000001.SZ_income.csv  000001.SZ_income_one.csv  000002.SZ_asset.csv  000002.SZ_cash.csv  000002.SZ_cash_one.csv  000002.SZ_income.csv  000002.SZ_income_one.csv  000004.SZ_asset.csv  000004.SZ_cash.csv  000004.SZ_cash_one.csv  000004.SZ_income.csv  000004.SZ_income_one.csv  000005.SZ_asset.csv  000005.SZ_cash.csv  000005.SZ_cash_one.csv  000005.SZ_income.csv  000005.SZ_income_one.csv  000006.SZ_asset.csv  000006.SZ_cash.csv  000006.SZ_cash_one.csv  000006.SZ_income.csv  000006.SZ_income_one.csv  000007.SZ_asset.csv  000007.SZ_cash.csv  000007.SZ_cash_one.csv  000007.SZ_income.csv  000007.SZ_income_one.csv  000008.SZ_asset.csv  000008.SZ_cash.csv  000008.SZ_cash_one.csv  000008.SZ_income.csv  000008.SZ_income_one.csv  000009.SZ_asset.csv  000009.SZ_cash.csv  000009.SZ_cash_one.csv  000009.SZ_income.csv  000009.SZ_income_one.csv  (+20085 more)
fixtures/: SH.code  SZ.code  xuqiu.cookie
index/: index.html  index.mjs
kline_out/: SH600000.csv  SH600004.csv  SH600006.csv  SH600007.csv  SH600008.csv  SH600009.csv  SH600010.csv  SH600011.csv  SH600012.csv  SH600015.csv  SH600016.csv  SH600017.csv  SH600018.csv  SH600019.csv  SH600020.csv  SH600021.csv  SH600022.csv  SH600023.csv  SH600025.csv  SH600026.csv  SH600027.csv  SH600028.csv  SH600029.csv  SH600030.csv  SH600031.csv  SH600033.csv  SH600035.csv  SH600036.csv  SH600037.csv  SH600038.csv  SH600039.csv  SH600048.csv  SH600050.csv  SH600051.csv  SH600052.csv  SH600053.csv  SH600054.csv  SH600055.csv  SH600056.csv  SH600057.csv  (+3979 more)
output_base/: 000002.SZ.csv  000004.SZ.csv  000005.SZ.csv  000006.SZ.csv  000007.SZ.csv  000008.SZ.csv  000009.SZ.csv  000010.SZ.csv  000011.SZ.csv  000012.SZ.csv  000014.SZ.csv  000016.SZ.csv  000017.SZ.csv  000019.SZ.csv  000020.SZ.csv  000021.SZ.csv  000023.SZ.csv  000025.SZ.csv  000026.SZ.csv  000027.SZ.csv  000028.SZ.csv  000029.SZ.csv  (+3911 more)
stdnet_note/: Cargo.toml
stdnet_note/examples/: aoc2021_01.rs  aoc2021_02.rs  aoc2021_03.rs  aoc2021_03.rs.tmp  stdnet_tcp_cli.rs  stdnet_tcp_cli_tokio.rs  stdnet_tcp_svr.rs  stdnet_tcp_svr_tokio.rs
stdnet_note/src/: company.md  main.rs  开发版本质量提升相关总结.md  网络处理note.md
(+6 files in other folders)
