[package]
name = "qurant_trade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
color-eyre = "0.6.2"
csv = "1.1.6"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.21.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
