[package]
edition = "2021"
name = "finial-auxm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# 2/true is too much, 0 is not enough, 1 is just right for backtraces

debug = 1

[dependencies]
anyhow = "1"
# response is json
axum = {version = "0.6", features = ["json", "macros", "ws"]}
serde = {version = "1.0", features = ["derive"]}
tower = "0.4"
tower-http = {version = "0.2", features = ["trace"]}
# 引入异步运行库
tokio = {version = "1", features = ["full"]}
# add trace logging
color-eyre = "0.6.1"
feed-rs = "1.0.0"
opentelemetry = {version = "0.17", features = ["rt-tokio"]}
opentelemetry-jaeger = {version = "0.16", features = ["rt-tokio"]}
reqwest = {version = "0.11.9", features = ["rustls-tls"], default-features = false}
tap = "1.0.1"
tracing = "0.1"
tracing-error = "0.2.0"
tracing-opentelemetry = "0.17"
tracing-subscriber = {version = "0.3", features = ["env-filter", "json"]}
tracing-tree = "0.2"
url = "2"
lazy_static = "1.4.0"
chrono = "0.4.23"
csv = "1.2.0"
serde_json = "1.0.93"
reqwest-middleware = "0.2.0"
reqwest-retry = "0.2.1"
