[package]
name = "diffreq"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xdiff"
path = "src/bin/xdiff.rs"

[[bin]]
name = "xreq"
path = "src/bin/xreq.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
async-trait = "0.1.57"
chrono = "0.4.23"
clap = { version = "3.2.22", features = ["derive"] }
console = "0.15.1"
dialoguer = "0.10.2"
http-serde = "1.1.2"
mockito = "0.31.0"
reqwest = { version = "0.11.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.13"
similar = { version = "2.2.0", features = ["inline"] }
string-builder = "0.2.0"
syntect = "5.0.0"
tokio = { version = "1.21.1", features = ["full"] }
url = { version = "2.3.1", features = ["serde"] }

[dev-dependencies]
mockito = "0.31.0"
